; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_get_settingid.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_get_settingid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @get_settingid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_settingid(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %6 = call i32 @memset(%struct.TYPE_4__* %3, i32 0, i32 4)
  %7 = load i32, i32* %2, align 4
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = call i32 @UuidToStringW(%struct.TYPE_4__* %3, i32** %5)
  %10 = load i32*, i32** %5, align 8
  %11 = call i32* @heap_strdupW(i32* %10)
  store i32* %11, i32** %4, align 8
  %12 = call i32 @RpcStringFreeW(i32** %5)
  %13 = load i32*, i32** %4, align 8
  ret i32* %13
}

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @UuidToStringW(%struct.TYPE_4__*, i32**) #1

declare dso_local i32* @heap_strdupW(i32*) #1

declare dso_local i32 @RpcStringFreeW(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
